--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,14 +3,6 @@
     border-bottom: 1px solid #888888;
 }
 
-.font-size-16{
-    font-size:16px !important;
-}
-
-.color-white{
-    color: white;
-}
-
 .loadingPanel {
     margin: 0px;
     padding: 0px;
@@ -30,7 +22,11 @@
     top: 30%;
     left: 45%;
 }
-
-.display-none {
-    display: none;
+.img-team-area-120p{
+    width: 120px;
+    height: 120px;
+}
+.img-team-area{
+    width: 240px;
+    height: 240px;
 }
