--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,7 @@
+.border-none > thead > tr > th, .border-none > tbody > tr > th, .border-none > tfoot > tr > th, .border-none > thead > tr > td, .border-none > tbody > tr > td, .border-none > tfoot > tr > td {
+    border: none;
+}
+
 .menu-top {
     padding: 0px !important;
     border-bottom: 1px solid #888888;
@@ -29,4 +33,17 @@
 .img-team-area{
     width: 240px;
     height: 240px;
+}
+
+.heading-css {
+    color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+    font-size: 14px;
+}
+
+.text-overflow-hide {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 60px;
 }
