Develop modul contact management

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,11 +26,13 @@
     top: 30%;
     left: 45%;
 }
-.img-team-area-120p{
+
+.img-team-area-120p {
     width: 120px;
     height: 120px;
 }
-.img-team-area{
+
+.img-team-area {
     width: 240px;
     height: 240px;
 }
@@ -47,3 +49,41 @@
     text-overflow: ellipsis;
     height: 60px;
 }
+
+/*custom page start*/
+.pagination > .active > div,
+.pagination > .active > div:focus,
+.pagination > .active > div:hover {
+    z-index: 3;
+    color: #fff;
+    cursor: not-allowed;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+.pagination > li > div {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #337ab7;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    cursor: pointer;
+}
+
+.pagination > .disabled > div,
+.pagination > .disabled > div:focus,
+.pagination > .disabled > div:hover,
+.pagination > .disabled > span,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > span:hover {
+    color: #777;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #ddd
+}
+
+/*custom page end*/
