--- a/public/css/templates/agency.css
+++ b/public/css/templates/agency.css
@@ -586,7 +586,7 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url(../img/map-image.png);
+    background-image: url(../../img/map-image.png);
     background-position: center;
     background-repeat: no-repeat
 }
@@ -645,7 +645,7 @@ section#contact .text-danger {
 }
 
 footer {
-    padding: 25px 0;
+    padding: 15px 0;
     text-align: center
 }
 
