--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,6 +92,7 @@
     height: 100px;
     text-overflow: ellipsis;
     overflow: hidden;
+    word-break: break-word;
 }
 
 .span-green-radio-order {
