--- a/public/plugins/ckeditor/contents.css
+++ b/public/plugins/ckeditor/contents.css
@@ -3,20 +3,20 @@ Copyright (c) 2003-2016, CKSource - Frederico Knabben. All rights reserved.
 For licensing, see LICENSE.md or http://ckeditor.com/license
 */
 
-body
-{
-	/* Font */
-	font-family: sans-serif, Arial, Verdana, "Trebuchet MS";
-	font-size: 12px;
+/*body*/
+/*{*/
+	/*!* Font *!*/
+	/*font-family: sans-serif, Arial, Verdana, "Trebuchet MS";*/
+	/*font-size: 12px;*/
 
-	/* Text color */
-	color: #333;
+	/*!* Text color *!*/
+	/*color: #333;*/
 
-	/* Remove the background color to make it transparent */
-	background-color: #fff;
+	/*!* Remove the background color to make it transparent *!*/
+	/*background-color: #fff;*/
 
-	margin: 20px;
-}
+	/*margin: 20px;*/
+/*}*/
 
 .cke_editable
 {
@@ -48,18 +48,18 @@ blockquote
 	border-right-width: 5px;
 }
 
-a
-{
-	color: #0782C1;
-}
+/*a*/
+/*{*/
+	/*color: #0782C1;*/
+/*}*/
 
-ol,ul,dl
-{
+/*ol,ul,dl*/
+/*{*/
 	/* IE7: reset rtl list margin. (#7334) */
-	*margin-right: 0px;
+	/**margin-right: 0px;*/
 	/* preserved spaces for list items with text direction other than the list. (#6249,#8049)*/
-	padding: 0 40px;
-}
+	/*padding: 0 40px;*/
+/*}*/
 
 h1,h2,h3,h4,h5,h6
 {
